--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'me.champeau.gradle.jmh' version '0.5.0'
 }
 
 group 'org.example'
@@ -11,6 +12,8 @@ repositories {
 }
 
 dependencies {
+    jmh 'org.openjdk.jmh:jmh-core:1.17.4'
+    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.17.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
